Bug 297864 - ThumbnailItem allows upscaling of Windows
Summary: ThumbnailItem allows upscaling of Windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: scene-opengl (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.9 RC 2
Assignee: Martin Flöser
URL: https://git.reviewboard.kde.org/r/105...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-10 19:34 UTC by Martin Flöser
Modified: 2012-07-09 19:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2012-04-10 19:34:13 UTC
How to reproduce:
1. Use Window Switching layout Grid
2. Have one window which is significantly smaller than the screen it is placed on
3. Don't have further windows
4. Use Alt+Tab

Actual Result:
The Thumbnail is upscaled significantly. This looks rather bad and makes the thumbnail all blurry

Expected Result:
Thumbnail does not get scaled larger than actual size of window.
Comment 1 Martin Flöser 2012-07-09 19:05:20 UTC
Git commit 8daf7e7ab7be22d489648fa14bf41b4bfe8f7a95 by Martin Gräßlin.
Committed on 09/07/2012 at 19:34.
Pushed by graesslin into branch 'KDE/4.9'.

Ensure that thumbnails do not get larger than the window

Upscaling windows looks really bad. If the thumbnail gets larger
than the window it's better to just use the orignal window size
and have the thumbnail rendered centered in the requested
region.
FIXED-IN: 4.9.0
REVIEW: 105459

M  +3    -0    kwin/scene.cpp

http://commits.kde.org/kde-workspace/8daf7e7ab7be22d489648fa14bf41b4bfe8f7a95